put css in its own file, make the paragraph in profile into a block

--- a/index.html
+++ b/index.html
@@ -2,43 +2,11 @@
 <html lang = "en" class ="browser">
 <div class="main">
     <head>
-        <style type="text/css">
-        
-            body {
-                background-color: darkgray;
-            }
-
-            h1 {
-                color: black;
-                font-family: Arial;
-                font-size: 40px;
-                text-align: center;
-            }
-            
-            h3 {
-                color: black;
-                font-family: Arial;
-                font-size: 20px;
-                text-align: center;
-            }
-
-            p {
-                color: black;
-                font-family: Arial;
-                font-size: 16px;
-            }
-
-            .social {
-                text-align: center;
-            }
-
-            .navigation {
-                text-align: center;
-                font-family: Arial;
-                font-size: 16px;
-            }
-        </style>
-        <title>John Zizikani Banda</title>        
+        <title>John Zizikani Banda</title>    
+        <meta charset = "UTF-8">
+        <meta name = "description" content>
+        <meta name = "keywords" content>
+        <link rel = "stylesheet" type = "text/css" href = "main.css">  
     </head>
 
     <body>
@@ -74,6 +42,12 @@
         <section class = "profile">
             <a name = "profile"></a>
             <h1>PROFILE</h1>
+            <p>
+                I am currently a University of Liverpool graduate with a 2:1 degree in Computer Science with Software Development.
+                I aspire to succeed in as a software developer, becoming fluent and even more competent programmer.
+                I have a strong determination to solving problems and challenges in a creative/innovative manner.
+                I also have a strong interest in software, game and app development.
+            </p>
         </section>
 
         <section class = "skills">
