created margin for profile, put image next to profile and make it bigger. Have name on its own at the 'home' section

--- a/index.html
+++ b/index.html
@@ -42,12 +42,14 @@
         <section class = "profile">
             <a name = "profile"></a>
             <h1>PROFILE</h1>
+            <!--make this in a block-->
             <p>
                 I am currently a University of Liverpool graduate with a 2:1 degree in Computer Science with Software Development.
                 I aspire to succeed in as a software developer, becoming fluent and even more competent programmer.
                 I have a strong determination to solving problems and challenges in a creative/innovative manner.
                 I also have a strong interest in software, game and app development.
             </p>
+            
         </section>
 
         <section class = "skills">
