added animated background. add to skills next

--- a/index.html
+++ b/index.html
@@ -10,7 +10,15 @@
     </head>
 
     <body>
-        <header id = "home" style = "height: 663px">
+        <header id = "home" style = "height: 665px">
+            <div class='ripple-background'>
+                <div class='circle xxlarge shade1'></div>
+                <div class='circle xlarge shade2'></div>
+                <div class='circle large shade3'></div>
+                <div class='circle mediun shade4'></div>
+                <div class='circle small shade5'></div>
+            </div>
+            
             <nav>
                 <ul class = "navigation">
                     <a href = #home>Home</a>
