--- a/index.html
+++ b/index.html
@@ -52,10 +52,12 @@
             <h1>PROFILE</h1>
             <!--make this in a block-->
             <ul class = "profileText">
-                I am currently a University of Liverpool graduate with a 2:1 degree in Computer Science with Software Development.
-                I aspire to succeed in as a software developer, becoming fluent and even more competent programmer.
-                I have a strong determination to solving problems and challenges in a creative/innovative manner.
-                I also have a strong interest in software, game and app development.
+                <div>
+                    I am currently a University of Liverpool graduate with a 2:1 degree in Computer Science with Software Development.
+                    I aspire to succeed in as a software developer, becoming fluent and even more competent programmer.
+                    I have a strong determination to solving problems and challenges in a creative/innovative manner.
+                    I also have a strong interest in software, game and app development.    
+                </div>        
             </ul>
             <div style = "position: absolute; top:700px; left: 1000px;">
                 <img src="JohnPicture.png" width=auto height=420 alt="John Picture"> 
