completed skills section. possibly add soft skills below it. Start adding projects to project section

--- a/index.html
+++ b/index.html
@@ -83,11 +83,55 @@
         <section class = "skills">
             <a name = "skills"></a>
             <h1>SKILLS</h1>
+
+            <div class = "row">
+                <div class = "columnSkills">
+                    <img src = "HTMLIcon.png" width = "83.75" height = "auto" alt = "HTML Icon">			
+                </div>
+                
+                <div class = "columnSkills">
+                    <img src = "CSSIcon.png" width = "80" height = "auto" alt = "CSS Icon">
+                </div>
+
+                <div class = "columnSkills">
+                    <img src = "JSIcon.png" width = "110" height = "auto" alt = "JS Icon">
+                </div>
+            </div>
+            <hr style = "width: 70%;">
+            <div class = "row">	
+                <div class = "columnSkills">
+                    <img src = "JavaIcon.png" width = "125" height = "auto" alt = "Java Icon">			
+                </div>
+
+                <div class = "columnSkills">
+                    <img src = "CIcon.png" width = "125" height = "auto" alt = "C Icon">
+                </div>
+
+                <div class = "columnSkills">
+                    <img src = "PythonIcon.png" width = "125" height = "auto" alt = "Python Icon">
+                </div>
+
+                <div class = "columnSkills">
+                    <img src = "HaskellIcon.png" width = "125" height = "auto" alt = "Haskell Icon">
+                </div>
+            </div>
+            <hr style = "width: 70%;">
+            <div class = "row">
+                <div class = "columnSkills">
+                    <img src = "MySQLIcon.png" width = "auto" height = "110" alt = "MySQL Icon">
+                </div>
+
+                <div class = "columnSkills">
+                    <img src = "GitIcon.png" width = "auto" height = "100" alt = "Git Icon">
+                </div>
+            </div>
+            <hr style = "width: 70%;">
         </section>
 
         <section class = "projects">
             <a name = "projects"></a>
             <h1>PROJECTS</h1>
+            <p style = "font-weight: bold; color: red;">Projects are currently being added.</p>
         </section>
 
         <section class = "contact">
