completed skills section. possibly add soft skills at the bottom. start doing projects section. made animation not go over text or icons in profile and home section

--- a/index.html
+++ b/index.html
@@ -35,28 +35,30 @@
             </div>
             
             <div class = "social">
-                <div class = "row">
-                    <div class = "column">
-                        <a href="https://www.linkedin.com/in/john-zizikani-banda-079626154/">
-                            <img src = "LinkedIn.png" width = "45" height = "auto" alt = "LinkedIn Icon" class = "center">        
-                        </a>
-                    </div>
-                    <div class = "column">
-                        <a href ="https://github.com/johnZbanda">
-                            <img src = "GithubIcon.png" width = 45" height = "auto" alt = "GitHub Icon" class = "center">
-                        </a>
-                    </div>
-                    <div class = "column">
-                        <a href = "mailto:johnzkbanda@gmail.com" method = "post" enctype = "text/plain">
-                            <img src = "EmailIcon.png" width = "50" height = "auto" alt = "Email Icon">
-                        </a>
-                    </div>
-                    <div class = "column">
-                        <a href = "John Zizikani Banda CV.pdf" >
-                            <img src = "FileIcon.png" width = "50" height = "auto" alt = "File Icon">
-                        </a>
-                    </div>
-                </div>     
+                <div>
+                    <div class = "row">
+                        <div class = "column">
+                            <a href="https://www.linkedin.com/in/john-zizikani-banda-079626154/">
+                                <img src = "LinkedIn.png" width = "45" height = "auto" alt = "LinkedIn Icon" class = "center">        
+                            </a>
+                        </div>
+                        <div class = "column">
+                            <a href ="https://github.com/johnZbanda">
+                                <img src = "GithubIcon.png" width = 45" height = "auto" alt = "GitHub Icon" class = "center">
+                            </a>
+                        </div>
+                        <div class = "column">
+                            <a href = "mailto:johnzkbanda@gmail.com" method = "post" enctype = "text/plain">
+                                <img src = "EmailIcon.png" width = "50" height = "auto" alt = "Email Icon">
+                            </a>
+                        </div>
+                        <div class = "column">
+                            <a href = "John Zizikani Banda CV.pdf" >
+                                <img src = "FileIcon.png" width = "50" height = "auto" alt = "File Icon">
+                            </a>
+                        </div>
+                    </div>   
+                </div>  
             </div>
 
         <!--try put on the same line as the text-->
