checking the positioning of the image on different devices

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <div class="main">
     <head>
         <title>John Zizikani Banda</title>    
+        <meta property = "og:image" content = "JohnPicture.png"/>
         <meta charset = "UTF-8">
         <meta name = "description" content>
         <meta name = "keywords" content>
@@ -20,13 +21,15 @@
             </div>
             
             <nav>
-                <ul class = "navigation">
-                    <a href = #home>Home</a>
-                    <a href = #profile>Profile</a>              
-                    <a href = #skills>Skills</a>
-                    <a href = #projects>Projects</a>
-                    <a href = #contact>Contact Me</a>
-                </ul>
+                <div>
+                    <ul class = "navigation">
+                        <a href = #home>Home</a>
+                        <a href = #profile>Profile</a>              
+                        <a href = #skills>Skills</a>
+                        <a href = #projects>Projects</a>
+                        <a href = #contact>Contact Me</a>
+                    </ul>
+                </div>
             </nav>
 
             <div class = "name">
@@ -69,17 +72,16 @@
             <a name = "profile"></a>
             <h1>PROFILE</h1>
             <!--make this in a block-->
-            <div class = "profileText">
-                <div>
-                    I am a University of Liverpool graduate with a 2:1 degree in Computer Science with Software Development.
-                    I aspire to succeed in as a software developer, becoming fluent and even more competent programmer.
-                    I have a strong determination to solving problems and challenges in a creative/innovative manner.
-                    I also have a strong interest in software, game and app development.    
-                </div>        
+                <img src = "JohnPicture.png" width = "auto" height = "400" class = "JohnPicture" style = "float: right;
+                margin-right: 5%;  position: relative;">
+                <p style = "margin-right: 30%; margin-bottom: 15%; margin-top: 10%;">
+                    In 2020, I graduated from the University of Liverpool with a 2:1 in Computer Science with Software Development.
+                    My aspiration is to grow into a career as a software developer, and to continue to evolve my skills as a programmer. 
+                    I am determined to solve problems and challenges in an innovative manner, with software, game and app development as my key interests.   
+                </p>
+
             </div>
-            <div style = "position: absolute; top:700px; left: 1000px;">
-                <img src="JohnPicture.png" width=auto height=420 alt="John Picture"> 
-            </div>  
+            <!--<img src = "JohnPicture.png" width = "auto" height = "auto" class = "JohnPicture">-->
         </section>
 
         <section class = "skills">
