sorted the images into a folder. start adding projects

--- a/index.html
+++ b/index.html
@@ -42,22 +42,22 @@
                     <div class = "row">
                         <div class = "column">
                             <a href="https://www.linkedin.com/in/john-zizikani-banda-079626154/">
-                                <img src = "LinkedIn.png" width = "45" height = "auto" alt = "LinkedIn Icon" class = "center">        
+                                <img src = "Images/LinkedIn.png" width = "45" height = "auto" alt = "LinkedIn Icon" class = "center">        
                             </a>
                         </div>
                         <div class = "column">
                             <a href ="https://github.com/johnZbanda">
-                                <img src = "GithubIcon.png" width = 45" height = "auto" alt = "GitHub Icon" class = "center">
+                                <img src = "Images/GithubIcon.png" width = 45" height = "auto" alt = "GitHub Icon" class = "center">
                             </a>
                         </div>
                         <div class = "column">
                             <a href = "mailto:johnzkbanda@gmail.com" method = "post" enctype = "text/plain">
-                                <img src = "EmailIcon.png" width = "50" height = "auto" alt = "Email Icon">
+                                <img src = "Images/EmailIcon.png" width = "50" height = "auto" alt = "Email Icon">
                             </a>
                         </div>
                         <div class = "column">
                             <a href = "John Zizikani Banda CV.pdf" >
-                                <img src = "FileIcon.png" width = "50" height = "auto" alt = "File Icon">
+                                <img src = "Images/FileIcon.png" width = "50" height = "auto" alt = "File Icon">
                             </a>
                         </div>
                     </div>   
@@ -72,7 +72,7 @@
             <a name = "profile"></a>
             <h1>PROFILE</h1>
             <!--make this in a block-->
-                <img src = "JohnPicture.png" width = "auto" height = "400" class = "JohnPicture" style = "float: right;
+                <img src = "Images/JohnPicture.png" width = "auto" height = "400" class = "JohnPicture" style = "float: right;
                 margin-right: 5%;  position: relative;">
                 <p style = "margin-right: 30%; margin-bottom: 15%; margin-top: 10%;">
                     In 2020, I graduated from the University of Liverpool with a 2:1 in Computer Science with Software Development.
@@ -90,43 +90,43 @@
 
             <div class = "row">
                 <div class = "columnSkills">
-                    <img src = "HTMLIcon.png" width = "83.75" height = "auto" alt = "HTML Icon">			
+                    <img src = "Images/HTMLIcon.png" width = "83.75" height = "auto" alt = "HTML Icon">			
                 </div>
                 
                 <div class = "columnSkills">
-                    <img src = "CSSIcon.png" width = "80" height = "auto" alt = "CSS Icon">
+                    <img src = "Images/CSSIcon.png" width = "80" height = "auto" alt = "CSS Icon">
                 </div>
 
                 <div class = "columnSkills">
-                    <img src = "JSIcon.png" width = "110" height = "auto" alt = "JS Icon">
+                    <img src = "Images/JSIcon.png" width = "110" height = "auto" alt = "JS Icon">
                 </div>
             </div>
             <hr style = "width: 70%;">
             <div class = "row">	
                 <div class = "columnSkills">
-                    <img src = "JavaIcon.png" width = "125" height = "auto" alt = "Java Icon">			
+                    <img src = "Images/JavaIcon.png" width = "125" height = "auto" alt = "Java Icon">			
                 </div>
 
                 <div class = "columnSkills">
-                    <img src = "CIcon.png" width = "125" height = "auto" alt = "C Icon">
+                    <img src = "Images/CIcon.png" width = "125" height = "auto" alt = "C Icon">
                 </div>
 
                 <div class = "columnSkills">
-                    <img src = "PythonIcon.png" width = "125" height = "auto" alt = "Python Icon">
+                    <img src = "Images/PythonIcon.png" width = "125" height = "auto" alt = "Python Icon">
                 </div>
 
                 <div class = "columnSkills">
-                    <img src = "HaskellIcon.png" width = "125" height = "auto" alt = "Haskell Icon">
+                    <img src = "Images/HaskellIcon.png" width = "125" height = "auto" alt = "Haskell Icon">
                 </div>
             </div>
             <hr style = "width: 70%;">
             <div class = "row">
                 <div class = "columnSkills">
-                    <img src = "MySQLIcon.png" width = "auto" height = "110" alt = "MySQL Icon">
+                    <img src = "Images/MySQLIcon.png" width = "auto" height = "110" alt = "MySQL Icon">
                 </div>
 
                 <div class = "columnSkills">
-                    <img src = "GitIcon.png" width = "auto" height = "100" alt = "Git Icon">
+                    <img src = "Images/GitIcon.png" width = "auto" height = "100" alt = "Git Icon">
                 </div>
             </div>
             <hr style = "width: 70%;">
@@ -148,22 +148,22 @@
                 <div class = "row">
                     <div class = "column">
                         <a href="https://www.linkedin.com/in/john-zizikani-banda-079626154/">
-                            <img src = "LinkedIn.png" width = "45" height = "auto" alt = "LinkedIn Icon" class = "center">        
+                            <img src = "Images/LinkedIn.png" width = "45" height = "auto" alt = "LinkedIn Icon" class = "center">        
                         </a>
                     </div>
                     <div class = "column">
                         <a href ="https://github.com/johnZbanda">
-                            <img src = "GithubIcon.png" width = 45" height = "auto" alt = "GitHub Icon" class = "center">
+                            <img src = "Images/GithubIcon.png" width = 45" height = "auto" alt = "GitHub Icon" class = "center">
                         </a>
                     </div>
                     <div class = "column">
                         <a href = "mailto:johnzkbanda@gmail.com" method = "post" enctype = "text/plain">
-                            <img src = "EmailIcon.png" width = "50" height = "auto" alt = "Email Icon">
+                            <img src = "Images/EmailIcon.png" width = "50" height = "auto" alt = "Email Icon">
                         </a>
                     </div>
                     <div class = "column">
                         <a href = "John Zizikani Banda CV.pdf" >
-                            <img src = "FileIcon.png" width = "50" height = "auto" alt = "File Icon">
+                            <img src = "Images/FileIcon.png" width = "50" height = "auto" alt = "File Icon">
                         </a>
                     </div>
                 </div>     
