--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         
         <section class = "profile">
             <a name = "profile"></a>
-            <h1>PROFILE</h1>
+            <h1><div>PROFILE</div></h1>
             <!--make this in a block-->
                 <img src = "Images/JohnPicture.png" width = "auto" height = "400" class = "JohnPicture" style = "float: right;
                 margin-right: 5%;  position: relative;">
@@ -86,7 +86,7 @@
 
         <section class = "skills">
             <a name = "skills"></a>
-            <h1>SKILLS</h1>
+            <h1><div>SKILLS</div></h1>
 
             <div class = "row">
                 <div class = "columnSkills">
@@ -134,13 +134,13 @@
 
         <section class = "projects">
             <a name = "projects"></a>
-            <h1>PROJECTS</h1>
+            <h1><div>PROJECTS</div></h1>
             <p style = "font-weight: bold; color: red;">Projects are currently being added.</p>
         </section>
 
         <section class = "contact">
             <a name = "contact"></a>
-            <h1>CONTACT ME</h1>
+            <h1><div>CONTACT ME</div></h1>
             <p>EMAIL: johnzkbanda@gmail.com</p>
             <p>UK, London</p>
 
