added two projects to project section. add more. try to do side by side images

--- a/index.html
+++ b/index.html
@@ -138,9 +138,30 @@
             <h1><div>PROJECTS</div></h1>
             <p style = "font-weight: bold; color: red;">Projects are currently being added.</p>
 
-            <!--Add a Carousel here-->
             <div class = "carousel">
+                <div class = "myCarousel fade">
+                    <img src = "Images/board.jpeg" width= "40%" height = "auto" alt = "board">
+                    <h1>Minesweeper</h1>
+                    <p>Developed and Implemented a game of Minesweeper for three different levels (Beginner, Intermediate and Advanced).
+                        This was the first large project I managed and developed on my own meaning that a lot of my skills were tested throughout
+                        the development of this project. 
+                    </p>
+                    <p style = "font-style: italic">Languages and Softwares used: Java, SQL, MySQL database server</p>
+                    <a href = "https://github.com/johnZbanda/final-year-project">Source Code</a>
+                </div>
 
+                <div class = "myCarousel fade">
+                    <img src = "Images/Yum.png" width = "40%" height = "auto" alt = "Yum icon">
+                    <h1>Yum!</h1>
+                    <p>Co-Developed a Student based Recipe App that will allow users to input different ingredients into their inventory
+                        and then search for recipes from a database given the ingredients they have. I was in charge of the database management
+                        and did the majority of the queries using SQL and a MySQL database server. 
+                    </p>
+                    <p style = "font-style: italic">Languages and Softwares used: NodeJS, SQL, MySQL database server, Express</p>
+                    <a href = "https://github.com/johnZbanda/group-project">Source Code</a>
+                </div>
+
+                <!--Add a Carousel here-->
                 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
                 <a class="next" onclick="plusSlides(1)">&#10095;</a>
 
