--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                 <div class = "myCarousel fade">
                     <img src = "Images/Yum.png" width = "40%" height = "auto" alt = "Yum icon">
                     <h1>Yum!</h1>
-                    <p>Co-Developed a Student based Recipe App that will allow users to input different ingredients into their inventory
+                    <p>Co-Developed a Student based Mobile Recipe App that will allow users to input different ingredients into their inventory
                         and then search for recipes from a database given the ingredients they have. I was in charge of the database management
                         and did the majority of the queries using SQL and a MySQL database server. 
                     </p>
@@ -169,7 +169,6 @@
                 <div style="text-align:center"> 
                     <span class="dot" onclick="currentSlide(1)"></span>
                     <span class="dot" onclick="currentSlide(2)"></span>
-                    <span class="dot" onclick="currentSlide(3)"></span>
                 </div>
             </div>
 
