added another project. to do: add more projects, create a static navigation bar that follows the user.

--- a/index.html
+++ b/index.html
@@ -3,12 +3,15 @@
 <div class="main">
     <head>
         <title>John Zizikani Banda</title>    
-        <meta property = "og:image" content = "JohnPicture.png"/>
-        <meta charset = "UTF-8">
-        <meta name = "description" content>
-        <meta name = "keywords" content>
-        <link rel = "stylesheet" type = "text/css" href = "main.css">
-        
+        <meta property = "og:image" content = "Images/JohnPicture.png"/>
+        <meta property = "og:type" content = "website"/>
+        <meta property = "og:url" content = "https://johnzbanda.github.io"/>
+        <meta charset = "UTF-8"/>
+        <meta name = "description" content/>
+        <meta name = "keywords" content/>
+        <link rel = "stylesheet" type = "text/css" href = "main.css"/>
+        <link rel = "icon" type = "image/png" href = "Images/JohnPicture.png"/>
+        <link rel = "icon" type = "image/png" href = "https://johnzbanda.github.io/Images/JohnPicture.png"/>
     </head>
 
     <body>
@@ -78,7 +81,7 @@
                 <p style = "margin-right: 30%; margin-bottom: 15%; margin-top: 10%;">
                     In 2020, I graduated from the University of Liverpool with a 2:1 in Computer Science with Software Development.
                     My aspiration is to grow into a career as a software developer, and to continue to evolve my skills as a programmer. 
-                    I am determined to solve problems and challenges in an innovative manner, with software, game and app development as my key interests.   
+                    I am determined to solve problems and challenges in an innovative manner, with software, game and web development as my key interests.   
                 </p>
 
             </div>
@@ -151,7 +154,7 @@
                 </div>
 
                 <div class = "myCarousel fade">
-                    <img src = "Images/Yum.png" width = "40%" height = "auto" alt = "Yum icon">
+                    <img src = "Images/Yum.png" width = "30%" height = "auto" alt = "Yum icon">
                     <h1>Yum!</h1>
                     <p>Co-Developed a Student based Mobile Recipe App that will allow users to input different ingredients into their inventory
                         and then search for recipes from a database given the ingredients they have. I was in charge of the database management
@@ -161,14 +164,27 @@
                     <a href = "https://github.com/johnZbanda/group-project">Source Code</a>
                 </div>
 
+                <div class = "myCarousel fade">
+                    <img src = "Images/DiscordIcon.png" width = "15%" height = "auto" alt = "Discord Icon">
+                    <h1>Discord Bot</h1>
+                    <p>
+                        Developed a bot using Discord's API to do random commands such as a dice roller and music player. This is a project
+                        that I decided to do in my spare time and look to add more aspects towards it based on feedback and comments from different 
+                        people. This bot is very similar to bots used in communication applications such as Slack
+                    </p>
+                    <p style = "font-style: italic">Languages and Softwares used: Javascript, Node JS, Discord API</p>
+                    <p style = "font-style: italic">Due to some restrictions with Discord's API, I cannot share the source code for this project</p>
+                </div>
+
                 <!--Add a Carousel here-->
                 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
                 <a class="next" onclick="plusSlides(1)">&#10095;</a>
 
                 <!--Don't forget to add more dots when adding more projects-->
                 <div style="text-align:center"> 
-                    <span class="dot" onclick="currentSlide(1)"></span>
-                    <span class="dot" onclick="currentSlide(2)"></span>
+                    <span class = "dot" onclick = "currentSlide(1)"></span>
+                    <span class = "dot" onclick = "currentSlide(2)"></span>
+                    <span class = "dot" onclick = "currentSlide(3)"></span>
                 </div>
             </div>
 
