updated CV. updated linkedIn URL.

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <div>
                     <div class = "row">
                         <div class = "column">
-                            <a href="https://www.linkedin.com/in/john-zizikani-banda-079626154/">
+                            <a href="https://www.linkedin.com/in/johnzbanda/">
                                 <img src = "Images/LinkedIn.png" width = "45" height = "auto" alt = "LinkedIn Icon" class = "center">        
                             </a>
                         </div>
@@ -150,7 +150,7 @@
                         the development of this project. 
                     </p>
                     <p style = "font-style: italic">Languages and Softwares used: Java, SQL, MySQL database server</p>
-                    <a href = "https://github.com/johnZbanda/final-year-project">Source Code</a>
+                    <a href = "https://github.com/johnZbanda/Minesweeper/">Source Code</a>
                 </div>
 
                 <div class = "myCarousel fade">
@@ -203,7 +203,7 @@
             <div class = "social">
                 <div class = "row">
                     <div class = "column">
-                        <a href="https://www.linkedin.com/in/john-zizikani-banda-079626154/">
+                        <a href="https://www.linkedin.com/in/johnzbanda/">
                             <img src = "Images/LinkedIn.png" width = "45" height = "auto" alt = "LinkedIn Icon" class = "center">        
                         </a>
                     </div>
