--- a/index.html
+++ b/index.html
@@ -79,9 +79,10 @@
                 <img src="Images/JohnPicture.png" width="auto" height="400" class="JohnPicture" style="float: right;
                 margin-right: 5%;  position: relative;">
                 <p style="margin-right: 30%; margin-bottom: 15%; margin-top: 10%;">
-                    In 2020, I graduated from the University of Liverpool with a 2:1 in Computer Science with Software Development.
-                    My aspiration is to grow into a career as a software developer, and to continue to evolve my skills as a programmer. 
-                    I am determined to solve problems and challenges in an innovative manner, with software, game and web development as my key interests.   
+                    I am a software developer with a strong passion for Quality Assurance and aspiration to grow my career as a software developer. 
+I specialise in establishing and building manual and automated test suites using various different testing frameworks. 
+I take lots of pride in advocating strong testing practices whilst also influencing others to assure quality. 
+I am determined to solve and/or detect problems in an innovative manner, with front-end development, software testing and music as my interests.
                 </p>
 
             </div>
